<resources>
    <string name="app_name">RoboCall</string>

    // Terms and condition

    <string name="heading">Robocall Watchdog</string>
    <string name="text_download">Thank you for downloading Robocall Watchdog Please click the following link to read our Terms &amp; Conditions to access the Robocall Watchdog.</string>
    <string name="text_link">Terms of use and Privacy policy</string>
    <string name="text_terms">I agree to the terms and conditions</string>
    <string name="text_privacy">I agree to the privacy policy</string>
    <string name="text_click">By clicking \"Next\" you are agreeing to our terms &amp; condition</string>
    <string name="text_next">NEXT</string>

    // Permission

    <string name="app_permission">App Permissions</string>
    <string name="access_contact">permission to access contacts</string>
    <string name="access_call">permission to access call info</string>
    <string name="access_network">permission to communicate with network</string>
    <string name="access_location">permission to access location</string>

    //Navigation

    <string name="name">Alex Heldens</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="phone">+ 151 335326</string>
    <string name="option">OPTIONS</string>
    <string name="call">Calls</string>
    <string name="call_option">identify calls,block scams and spam</string>
    <string name="contact">Contacts</string>
    <string name="contact_option">Lorem Ipsum</string>
    <string name="setting">Settings</string>
    <string name="rating">Ratings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="notification">Notifications</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    //Access code

    <string name="enter_code">Please enter access code</string>
    <string name="verify_code">VERIFY CODE</string>

    //Phone number

    <string name="enter_number">Enter Phone number</string>
    <string name="below_number">Please enter your phone number below</string>
    <string name="phone_continue">CONTINUE</string>
    
    //Privacy Policy
    
    <string name="privacy_heading_one">This privacy policy governs your use of the software application Robocall for mobile devices. Robocall is firmly committed to the security and protection of personal information of our Users and their contacts.</string>
    <string name="privacy_heading_two">User Profile</string>
    <string name="privacy_heading_three">When You create a user profile in the Services and confirm being the holder of a certain number, Truecaller will collect the information provided by You. In order to create a user profile, You must register Your first name, last name and phone number.</string>
    <string name="privacy_heading_four">Installation and Use</string>
    <string name="privacy_heading_five">When You install and use the Services, Truecaller will collect personal information from You and any devices You may use in Your interaction with our Services.</string>
    <string name="privacy_heading_six">Third Party Services</string>
    <string name="privacy_heading_seven">ou may provide us with Your user identifier information regarding, or to enable Your usage of, certain third party services (together with a mapped photo where applicable) e.g. social networking services and payment services, in order for the Services to interoperate with such third party services. </string>

</resources>
