<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_weight="1.8"
            android:gravity="left">


            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:src="@drawable/back_arrow"
                />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:layout_weight="0.2"
            android:gravity="center">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="Privacy Policy"
                android:textSize="22sp"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_privacy_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:text="@string/privacy_heading_one"/>

        <TextView
            android:id="@+id/tv_privacy_two"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:text="@string/privacy_heading_two"/>

        <TextView
            android:id="@+id/tv_privacy_three"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:text="@string/privacy_heading_three"/>

        <TextView
            android:id="@+id/tv_privacy_four"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:text="@string/privacy_heading_four"/>

        <TextView
            android:id="@+id/tv_privacy_five"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:text="@string/privacy_heading_five"/>

        <TextView
            android:id="@+id/tv_privacy_six"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:text="@string/privacy_heading_six"/>

        <TextView
            android:id="@+id/tv_privacy_seven"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:text="@string/privacy_heading_seven"/>

        <TextView
            android:visibility="invisible"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:text="@string/privacy_heading_six"/>

    </LinearLayout>


        </ScrollView>
    </LinearLayout>
</LinearLayout>