<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/tv_app_permission"
            android:layout_marginTop="55dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_permission"
            android:textColor="@color/colorBlack"
            android:textSize="27sp"/>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">


                <TextView
                    android:id="@+id/tv_contact_access"
                    android:layout_weight="1.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/access_contact"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"/>

                <Switch
                    android:layout_weight="0.5"
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/SCBSwitch"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">


                <TextView
                    android:id="@+id/tv_call_access"
                    android:layout_weight="1.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/access_call"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"/>

                <Switch
                    android:layout_weight="0.5"
                    android:id="@+id/switch2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/SCBSwitch"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">


                <TextView
                    android:id="@+id/tv_network_access"
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/access_network"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"/>

                <Switch
                    android:layout_weight="0"
                    android:id="@+id/switch3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/SCBSwitch"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">


                <TextView
                    android:id="@+id/tv_location_access"
                    android:layout_weight="1.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/access_location"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"/>

                <Switch
                    android:layout_weight="0.5"
                    android:id="@+id/switch4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/SCBSwitch"
                    />

            </LinearLayout>


        </LinearLayout>

        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:layout_weight=".1"
            android:id="@+id/r_layout_next"
            android:gravity="center|left"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/colorPrimaryDark">


            <TextView
                android:id="@+id/tv_next"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_next"
                android:textSize="19sp"
                android:textColor="@color/colorWhite"/>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>