<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@color/nav_blue">

        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/img_profile_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop"
                android:background="@drawable/dummy_account_image"
                app:civ_border_color="@color/transparent" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_name"
                android:layout_weight="0.7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/colorWhite"
                android:textSize="17sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_sign_out"
                android:layout_weight="1.3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:textSize="17sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           >

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/colorWhite"
                android:textSize="17sp"
                />


        </LinearLayout>

    </LinearLayout>

<LinearLayout
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/colorBlack"/>

            <LinearLayout
                android:id="@+id/linear_calls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:src="@drawable/blue_circle"/>

                <LinearLayout

                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_call"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/call"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        />

                    <TextView
                        android:id="@+id/tv_call_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/call_option"
                        android:textColor="@color/colorLightBlack"
                        android:textSize="15sp"
                        />

                    <View
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorLightBlack"></View>

                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:src="@drawable/blue_circle"/>

                <LinearLayout
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        />

                    <TextView
                        android:id="@+id/tv_contact_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_option"
                        android:textColor="@color/colorLightBlack"
                        android:textSize="15sp"
                        />

                    <View
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorLightBlack"></View>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:src="@drawable/blue_circle"/>

                <LinearLayout
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setting"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        />

                    <TextView
                        android:id="@+id/tv_setting_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_option"
                        android:textColor="@color/colorLightBlack"
                        android:textSize="15sp"
                        />

                    <View
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorLightBlack"></View>

                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:src="@drawable/blue_circle"/>

                <LinearLayout
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        />

                    <TextView
                        android:id="@+id/tv_rating_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_option"
                        android:textColor="@color/colorLightBlack"
                        android:textSize="15sp"
                        />

                    <View
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorLightBlack"></View>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:src="@drawable/blue_circle"/>

                <LinearLayout
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_privacy_policy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        />

                    <TextView
                        android:id="@+id/tv_privacy_policy_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_option"
                        android:textColor="@color/colorLightBlack"
                        android:textSize="15sp"
                        />

                    <View
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorLightBlack"></View>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:src="@drawable/blue_circle"/>

                <LinearLayout
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_notification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/notification"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        />

                    <TextView
                        android:id="@+id/tv_notification_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_option"
                        android:textColor="@color/colorLightBlack"
                        android:textSize="15sp"
                        />

                    <View
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorLightBlack">

                    </View>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Last"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>

</LinearLayout>